fixed testimonies formatting on mobile

--- a/sitecode/homestyle.css
+++ b/sitecode/homestyle.css
@@ -163,6 +163,7 @@ p, .quote{
 
 .testimonies{
   height: fit-content;
+  width: auto;
   display: flex;
   flex-wrap: wrap;
   max-width: 1500px;
@@ -174,7 +175,8 @@ p, .quote{
   margin: auto;
   margin-bottom: 3em;
   height: 565px;
-  width: 413px;
+  width: 95%;
+  max-width: 413px;
   border-radius: 5px;
   box-shadow: 2px 2px 10px rgb(184, 182, 182);
 
@@ -189,12 +191,11 @@ p, .quote{
   border-radius: 100%;
   width: 120px;
   height: 120px;
-  position: absolute;
-  margin-top: -125px;
+  position: relative;
+
+  margin: auto;
 
   overflow: hidden;
-
-  margin-left: 146px;
 }
 
 .pfpimg{
@@ -205,9 +206,9 @@ p, .quote{
   text-align: center;
   vertical-align: auto;
   margin: auto;
-  margin-bottom: 70px;
+  margin-bottom: -70px;
   height: 75%;
-  width: 413px;
+  width: 100%;
   background-color: #1A438B;
   border-radius: 5px;
   box-shadow: 2px 2px 10px rgb(228, 226, 226);
@@ -219,18 +220,18 @@ p, .quote{
 
   text-align: center;
   font-size: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 5%;
+  padding-right: 5%;
   color: white;
 
-  position: absolute;               /* 2 */
-  top: 50%;                         /* 3 */
-  transform: translate(0, -50%);  /* 4 */
+  margin: auto;
+  padding-top: 20%;
 }
 
 .pics{
   width: fit-content;
   margin: auto;
+  
 }
 
 .internpic{
